# wasmer_android_jnicall_repro

./: README.md
android/app/src/main/java/com/wasmer/android/: MainActivity.java
android_runtime/: Cargo.toml
android_runtime/src/: lib.rs
test_module/src/: lib.rs
