[package]
name = "wasmer_android"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
jni = { version = "0.16.0", default-features = false }
lazy_static = "1.4.0"
android_logger = "0.8"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "7da6101732745b43bdb528c53d9a60d1e4d354a7" }
log = "0.4"
